# AgentSchema

./: .gitignore  README.md  clean.ps1  format.ps1  tests.ps1
runtime/python/agentschema/: .gitignore  README.md  pyproject.toml
runtime/python/agentschema/src/agentschema/core/: _AgentDefinition.py  _AgentManifest.py  _Binding.py  _Connection.py  _EnvironmentVariable.py  _Format.py  _McpServerApprovalMode.py  _Model.py  _ModelOptions.py  _Parser.py  (+8 more)
runtime/python/agentschema/tests/core/: test_load_agentdefinition.py  test_load_agentmanifest.py  test_load_anonymousconnection.py  test_load_apikeyconnection.py  test_load_arrayproperty.py  test_load_binding.py  test_load_codeinterpretertool.py  test_load_connection.py  test_load_containeragent.py  test_load_context.py  test_load_customtool.py  test_load_environmentvariable.py  test_load_filesearchtool.py  test_load_format.py  test_load_functiontool.py  test_load_mcpserverapprovalmode.py  test_load_mcpservertoolalwaysrequireapprovalmode.py  test_load_mcpservertoolneverrequireapprovalmode.py  test_load_mcpservertoolspecifyapprovalmode.py  test_load_mcptool.py  test_load_model.py  test_load_modeloptions.py  test_load_modelresource.py  test_load_objectproperty.py  test_load_openapitool.py  test_load_parser.py  test_load_promptagent.py  test_load_property.py  test_load_propertyschema.py  test_load_protocolversionrecord.py  test_load_referenceconnection.py  test_load_remoteconnection.py  test_load_resource.py  test_load_template.py  test_load_tool.py  test_load_toolresource.py  test_load_websearchtool.py  test_load_workflow.py
(+286 files in other folders)
